##################################################
 Revision history for Log::Log4perl
##################################################

1.45 (not yet released)
   *    (ms) fgeueke provided a pull request for short-circuiting boolean
             filters: https://github.com/mschilli/log4perl/pull/48

1.44 (2014/05/17)
   *    (ms) Skipped mkpath umask tests on Win32 which doesn't support it
             properly.
   *    (ms) Requiring core module File::Path 2.06_06, which has remove_tree() 
             (fixes test suite for ancient perl-5.6.2).
   *    (ms) Brian Wightman fixed temporary file cleanup in the test suite
             for Win32: https://github.com/mschilli/log4perl/pull/45

1.43 (2014/03/16)
   *    (ms) Added %m{indent} to indent multi-line messages according to the
             PatternLayout (inspired by Wolfgang Pecho) 
   *    (ms) [rt.cpan.org #84818] Deven T. Corzine suggested adding
             a conditional use Win32 on Win32 platform to fix a 
             chicken-and-egg problem with the resurrector.
   *    (ms) Brian Wightman fixed Win32 log file cleanup in test suite
             https://github.com/mschilli/log4perl/pull/39. New FAQ
             entry on Win32 log file cleanup.

1.42 (2013/07/25)
   *    (ms) BenRifkah Bergsten-Buret added ';!' for property configurator
             comment delimiters:
             https://github.com/mschilli/log4perl/issues/25
   *    (ms) [rt.cpan.org 84723] Suppress error if close() in the file 
             appender in pipe mode returns "No child processes".
   *    (ms) Ronald J Kimball fixed a bug with the file appender's 
             create_at_logtime option in combination with 
             recreate_check_signal:
             https://github.com/mschilli/log4perl/pull/28
   *    (ms) Fixed additivity() modifications after init():
             https://github.com/mschilli/log4perl/issues/29
   *    (ms) [rt.cpan.org 87191] Applied patch by Zefram for better 