@@ -5,6 +5,10 @@
 1.45 (not yet released)
    *    (ms) fgeueke provided a pull request for short-circuiting boolean
              filters: https://github.com/mschilli/log4perl/pull/48
+   *    (ms) [rt.cpan.org #94009] Tim Bunce had requested that the 
+             PatternLayout's %m specifier allow for fixed indentation,
+             variable indentation, and at the same time permit the use
+             of the chomp option. Added with tests and docs.
 
 1.44 (2014/05/17)
    *    (ms) Skipped mkpath umask tests on Win32 which doesn't support it
